--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -133,11 +133,18 @@ libblockhash_la_LINK = $(LIBTOOL) $(AM_V_lt) --tag=CC \
 	$(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) --mode=link $(CCLD) \
 	$(AM_CFLAGS) $(CFLAGS) $(libblockhash_la_LDFLAGS) $(LDFLAGS) \
 	-o $@
+libphash_simple_la_LIBADD =
+am_libphash_simple_la_OBJECTS = phs_dct_image_hash.lo
+libphash_simple_la_OBJECTS = $(am_libphash_simple_la_OBJECTS)
+libphash_simple_la_LINK = $(LIBTOOL) $(AM_V_lt) --tag=CC \
+	$(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) --mode=link $(CCLD) \
+	$(AM_CFLAGS) $(CFLAGS) $(libphash_simple_la_LDFLAGS) \
+	$(LDFLAGS) -o $@
 PROGRAMS = $(bin_PROGRAMS)
 am_blockhash_OBJECTS = main.$(OBJEXT) misc.$(OBJEXT) \
 	process_image.$(OBJEXT) process_video.$(OBJEXT)
 blockhash_OBJECTS = $(am_blockhash_OBJECTS)
-blockhash_DEPENDENCIES = libblockhash.la
+blockhash_DEPENDENCIES = libblockhash.la libphash_simple.la
 AM_V_P = $(am__v_P_@AM_V@)
 am__v_P_ = $(am__v_P_@AM_DEFAULT_V@)
 am__v_P_0 = false
@@ -172,8 +179,10 @@ AM_V_CCLD = $(am__v_CCLD_@AM_V@)
 am__v_CCLD_ = $(am__v_CCLD_@AM_DEFAULT_V@)
 am__v_CCLD_0 = @echo "  CCLD    " $@;
 am__v_CCLD_1 = 
-SOURCES = $(libblockhash_la_SOURCES) $(blockhash_SOURCES)
-DIST_SOURCES = $(libblockhash_la_SOURCES) $(blockhash_SOURCES)
+SOURCES = $(libblockhash_la_SOURCES) $(libphash_simple_la_SOURCES) \
+	$(blockhash_SOURCES)
+DIST_SOURCES = $(libblockhash_la_SOURCES) \
+	$(libphash_simple_la_SOURCES) $(blockhash_SOURCES)
 am__can_run_installinfo = \
   case $$AM_UPDATE_INFO_DIR in \
     n|no|NO) false;; \
@@ -315,12 +324,14 @@ target_alias = @target_alias@
 top_build_prefix = @top_build_prefix@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
-lib_LTLIBRARIES = libblockhash.la
+lib_LTLIBRARIES = libblockhash.la libphash_simple.la
 libblockhash_la_SOURCES = blockhash.c
 libblockhash_la_LDFLAGS = -no-undefined
-include_HEADERS = blockhash.h
+libphash_simple_la_SOURCES = phs_dct_image_hash.c
+libphash_simple_la_LDFLAGS = -no-undefined
+include_HEADERS = blockhash.h phs.h phs_endian.h phs_swap.h
 blockhash_SOURCES = main.c misc.c process_image.c process_video.c processing.h
-blockhash_LDADD = libblockhash.la
+blockhash_LDADD = libblockhash.la libphash_simple.la
 all: all-am
 
 .SUFFIXES:
@@ -393,6 +404,9 @@ clean-libLTLIBRARIES:
 
 libblockhash.la: $(libblockhash_la_OBJECTS) $(libblockhash_la_DEPENDENCIES) $(EXTRA_libblockhash_la_DEPENDENCIES) 
 	$(AM_V_CCLD)$(libblockhash_la_LINK) -rpath $(libdir) $(libblockhash_la_OBJECTS) $(libblockhash_la_LIBADD) $(LIBS)
+
+libphash_simple.la: $(libphash_simple_la_OBJECTS) $(libphash_simple_la_DEPENDENCIES) $(EXTRA_libphash_simple_la_DEPENDENCIES) 
+	$(AM_V_CCLD)$(libphash_simple_la_LINK) -rpath $(libdir) $(libphash_simple_la_OBJECTS) $(libphash_simple_la_LIBADD) $(LIBS)
 install-binPROGRAMS: $(bin_PROGRAMS)
 	@$(NORMAL_INSTALL)
 	@list='$(bin_PROGRAMS)'; test -n "$(bindir)" || list=; \
@@ -456,6 +470,7 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/blockhash.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/main.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/misc.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/phs_dct_image_hash.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/process_image.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/process_video.Po@am__quote@
 
